--- a/tip/406.md
+++ b/tip/406.md
@@ -31,7 +31,7 @@ cookie support.
 
 Currently, Tcl programs that handle cookies have to do so manually, examining
 the otherwise-unparsed HTTP headers to see if anything relevant has been set.
-As the cookie protocol <http://tools.ietf.org/html/rfc6265>  is quite complex,
+As the [cookie protocol (RFC 6265)](http://tools.ietf.org/html/rfc6265)  is quite complex,
 it is highly desirable to have a centralized implementation of at least the
 basic parsing and injection code.
 
@@ -65,37 +65,37 @@ The _cookieName_ and _cookieValue_ are relatively self-explanatory; they
 represent the name/value pair to store. The _optionDictionary_ contains the
 parsed cookie options, being at least these:
 
- hostonly: Boolean; whether the cookie should only ever be returned to the
+ **hostonly**: Boolean; whether the cookie should only ever be returned to the
  originating host \(if not, it should be sent according to the domain\). This
  property is always present.
 
- httponly: Boolean; whether the cookie ought to be only used with HTTP
+ **httponly**: Boolean; whether the cookie ought to be only used with HTTP
  connections. \(NB: This is unlikely to be something we enforce.\) This property
  is always present.
 
- persistent: Boolean; whether the HTTP server wishes the cookie to persist for
+ **persistent**: Boolean; whether the HTTP server wishes the cookie to persist for
  longer than the current "session". This property is always present.
  Non-persistent cookies are expected to never be committed to permanent
  storage.
 
- secure: Boolean; whether the cookie should only be sent on "secure"
+ **secure**: Boolean; whether the cookie should only be sent on "secure"
  connections to the HTTP server. \(This typically means "HTTPS is required",
  but the various cookie specifications are less-than-clear in this area.\) This
  property is always present.
 
- expires: Timestamp; when a persistent cookie will cease to be interesting to
+ **expires**: Timestamp; when a persistent cookie will cease to be interesting to
  the HTTP server that issued it. \(NB: If this is in the past, any matching
  cookie should be deleted.\) This property is only present if the "persistent"
  property is true.
 
- domain: String; what domains should this cookie be sent to. This property is
+ **domain**: String; what domains should this cookie be sent to. This property is
  always present, but may sometimes be the same as the "origin" property; see
  the "hostonly" property for how to treat this.
 
- origin: String; what host did we send the request to that caused this cookie
+ **origin**: String; what host did we send the request to that caused this cookie
  to be generated. This property is always present.
 
- path: String; what resource paths within the relevant HTTP servers should a
+ **path**: String; what resource paths within the relevant HTTP servers should a
  cookie be sent to. This property is always present.
 
 The result of this command will be ignored \(so long as it is non-exceptional\).
