--- a/tip/480.md
+++ b/tip/480.md
@@ -90,27 +90,27 @@ two members: `::tcl::pragma type` and `::tcl::pragma noalias`.
 
 The `::tcl::pragma type` command will have the syntax:
 
-    ::tcl::pragma type typeName $value1 $value2...
+ > **::tcl::pragma type** _typeName $value1 $value2..._
 
-In this usage, `typeName` is a description of the acceptable type of
+In this usage, _typeName_ is a description of the acceptable type of
 the given values. The values will be checked for whether they are
 instances of the given type, and a run-time error will be thrown if
 any value is not. Initially, the following types will be supported:
 
-+ `boolean`: Indicates that the value is a Boolean: `0`, `1`, `off`,
+* **boolean**: Indicates that the value is a Boolean: `0`, `1`, `off`,
   `on`, `true`, `false`, `yes`, `no`: in general, a value that will pass
   the test of `string is boolean -strict.`
 
-+ `integer`: Indicates that the value is an integer, small enough to fit
+* **integer**: Indicates that the value is an integer, small enough to fit
   in a C 'int' value on the current platform.
 
-+ `wide`: Indicates that the value is an integer, small enough to fit
+* **wide**: Indicates that the value is an integer, small enough to fit
   in a `Tcl_WideInt` value on the current platform.
 
-+ `entier`: Indicates that the value is an integer, without constraint
+* **entier**: Indicates that the value is an integer, without constraint
   on its size.
 
-+ `double`: Indicates that the value is representable as a
+* **double**: Indicates that the value is representable as a
   double-precision floating point number (including the special values
   for Infinity and Not-a-Number).
 
@@ -124,7 +124,7 @@ the syntax for this specification is still being discussed.
 _Note that this command operates on values, not variables._ A command
 like:
 
-    ::tcl::pragma int $a
+    ::tcl::pragma type int $a
 
 does not declare that `a` is an integer variable, and require future
 assigmnents to it to have the given type. It merely asserts that at
@@ -146,7 +146,7 @@ error options must also be manipulated.)
 
 The syntax for the `::tcl::pragma noalias` command shall be:
 
-    ::tcl::pragma noalias set1 set2...
+ > **::tcl::pragma noalias** _set1 set2..._
 
 In this usage, `set1`, `set2`, ... are lists of variable names.
 The syntax expresses the assertion that variables that are mentioned
@@ -172,7 +172,7 @@ including the possibility on the command line. For instance to assert
 that `a` may be an alias of `b` or `c`, but `b` and `c` must not alias
 each other, the command:
 
-   ::tcl::pragma noalias {a b} {a c}
+    ::tcl::pragma noalias {a b} {a c}
 
 might be used. (The program could specify, redundantly, `b` and `c` on the
 command line, but the `noalias` command will enforce that any variable
