Heading level correction

--- a/tip/480.md
+++ b/tip/480.md
@@ -9,7 +9,7 @@
 	Post-History:
 ------
 
-## Abstract
+# Abstract
 
 This TIP proposes a new ensemble in the `::tcl` namespace,
 `::tcl::pragma`, that will provide a place to install commands that
@@ -25,7 +25,7 @@ so that the set of available assertions can be expanded in the future
 as additional opportunities are discovered to make useful claims about
 program and data structure.
 
-## Motivation
+# Motivation
 
 Tcl, of course, is a typeless language: every value is a
 string. Moreover, it is an intensely dynamic language: the association
@@ -81,12 +81,12 @@ types and alias relationships would have multiple advantages:
    will create an alias without any procedure accessing one or another
    of the variables being any the wiser.
 
-## Proposal
+# Proposal
 
 The `::tcl::pragma` ensemble will be added. Initially, it will have
 two members: `::tcl::pragma type` and `::tcl::pragma noalias`.
 
-### tcl::pragma type
+## tcl::pragma type
 
 The `::tcl::pragma type` command will have the syntax:
 
@@ -142,7 +142,7 @@ and in fact the bytecode compiler will be free to compile that, or
 similar code. (The description is slightly oversimplified, since other
 error options must also be manipulated.)
 
-### tcl::pragma noalias
+## tcl::pragma noalias
 
 The syntax for the `::tcl::pragma noalias` command shall be:
 
@@ -206,9 +206,9 @@ of comparing all pairs, it will be easier to maintain a hash table of
 variable addresses, and check for collisions by looking for existing
 hash entries.
 
-## Discussion
+# Discussion
 
-### The Naming of Names
+## The Naming of Names
 
 An appropriate name for this ensemble is a difficult choice. A very
 early draft of this proposal, circulated privately, suggested
@@ -223,7 +223,7 @@ but rather a different sort of expression of a constraint. The
 similarity of the names would therefore be confusing. In names, as in
 many other aspects of life, "the good ones are already taken."
 
-### Runtime behaviour
+## Runtime Behaviour
 
 The assertions described in this TIP are not without cost at runtime.
 In an interpreted environment, it may be desirable to control, on a
@@ -236,7 +236,7 @@ assertions to be Out Of Scope at the present time. If it does prove to
 be necessary, it can be done with a mechanism analogous to the way
 that today's `::control::assert` works.
 
-## References
+# References
 
 1.  Kenny, Kevin B. and Donal K. Fellows. 'The State of Quadcode 2017.'
     _Proc. 24th Annual Tcl/Tk Conf._ Houston, Tex.: Tcl Community
