--- a/tip/519.md
+++ b/tip/519.md
@@ -30,11 +30,11 @@ to accept an optional argument to specify its visilibity inline.
 
     * method name ?option? argList bodyScript
 
-Where ***option*** can be either ***-export*** or ***-unexpor***. If no option
+Where ***option*** can be either ***-export*** or ***-unexport***. If no option
 is provided, the default applies.
 
 This change is backwards-compatible, as the new form is not currently valid and
-would results in an wrong-number-of-arguments error.
+would result in an wrong-number-of-arguments error.
 
 # Implementation
 
