--- a/tip/520.md
+++ b/tip/520.md
@@ -1,15 +1,14 @@
-# TIP #520; Make NaN Quiet
-Author:		Kevin B. Kenny <kevin.b.kenny@gmail.com>
-State:		Draft
-Type:		Project
-Vote:		Pending
-Created:	18 October 2018
-Post-History:
-Tcl-Version:	8.7
-Keywords:	Tcl, floating point, NaN, not a number
+# TIP 520: Make NaN Quiet
+	Author:		Kevin B. Kenny <kevin.b.kenny@gmail.com>
+	State:		Draft
+	Type:		Project
+	Vote:		Pending
+	Created:	18 October 2018
+	Post-History:
+	Tcl-Version:	8.7
+	Keywords:	Tcl, floating point, NaN, not a number
 -----
-
-## Abstract
+# Abstract
 
 This TIP proposes that the special floating point constants `NaN`,
 `±NaN`, and `[±]NaN(`_hex_`)` be accepted in any context where
@@ -19,7 +18,7 @@ exceptions are errors) to 'quiet NaN' semantics (where floating-point
 exceptions return the constant, `NaN`, and operations where one of the
 operands is `NaN` propagate the `NaN` to their results).
 
-## Background
+# Background
 
 Since Tcl 8.5, [[TIP 132](132.md)] Tcl has had the capability to
 recognize the special IEEE floating point constants, `Inf`
@@ -91,7 +90,7 @@ function shall continue to throw errors when presented with `NaN`
 The C interface `Tcl_GetDoubleFromObj` shall be modified to accept
 NaN's without thowing errors.
 
-# Reference implementation
+# Reference Implementation
 
 Most of the implementation has been in the code base for along time,
 albeit hidden, under the `-DACCEPT_NAN` compilation option.
@@ -101,7 +100,7 @@ update to `Tcl_GetDoubleFromObj`; changes to `max` and `min`)
 still need to be made; the link to the implementation branch will
 be added to this TIP.
 
-# Unresolved concerns
+# Unresolved Concerns
 
 The change to `Tcl_GetDoubleFromObj`, alone among the changes outlined
 in this proposal, may need to be delayed until Tcl 9. It introduces a
