--- a/tip/414.md
+++ b/tip/414.md
@@ -14,7 +14,7 @@
 
 The ability to initialize just the lower level Tcl subsystems used to be part
 of the public API, now it is no longer exposed. This TIP proposes that it be
-re-exposed.
+re-exposed through the existing function Tcl\_SetPanicProc()
 
 # Rationale
 
@@ -28,25 +28,22 @@ the name of the executable available to Tcl scripts.
 
 # Proposed Change
 
-A new function Tcl\_InitSubsystems, similar to the internal TclInitSubsystems,
-should be exposed as alternative to Tcl\_FindExecutable in Tcl's C API. This
-will _not_ be a part of the Stub API; it is not intended to ever be used
-from an initialized stubbed environment, as it is meant to be used prior to
-the stub table being available. It has a single argument, _panicProc_.
-When NULL, the default panic function is used. The full signature is:
+The functionality of the existing function Tcl\_SetPanicProc is extended,
+such that it does the initialization of the lower level Tcl subsystem as well.
+It (still) has a single argument, _panicProc_. When NULL, the default panic
+function is used. The return value, which used to be _void_ is changed to
+_const char *_ and it returns the version of the Tcl library which was
+initialized. The full signature is:
 
  > EXTERN const char \*
-   **Tcl\_InitSubsystems**\(
+   **Tcl\_SetPanicProc**\(
        Tcl\_PanicProc \*_panicProc_\);
-
-The return value of _Tcl\_InitSubsystems_ is the Tcl version.
 
 # Reference Implementation
 
 A reference implementation is available in the **initsubsystems** branch.
-<http://core.tcl.tk/tcl/info/3c9828933f> 
+<http://core.tcl.tk/tcl/info/initsubsystems> 
 
 # Copyright
 
 This document has been placed in the public domain.
-
