Cleaning up TIP 510

--- a/tip/510.md
+++ b/tip/510.md
@@ -20,7 +20,7 @@ This tip intend to add *Rbc* in the same way as *Ttk* to *Tk*.
 *Tk* has already adopted some of *BLT/Rbc* commands.
 Still missing are the widgets.
 
-*Rbc* is available on sourceforge. But the development is stalled.
+*Rbc* is available on sourceforge and github, but the development is stalled.
 
 Modernizing *Rbc* and including it in *Tk* will give some great new widgets.
 Using the same approach like in *Ttk* will give results in very short time.
@@ -28,12 +28,12 @@ There is also less risk because *Rbc* is already used in different projects.
 
 # Specification
 
-C-source code will be put in *.../generic/rbc/*
-Tcl-source  code will be put in *.../library/rbc/*
-Test files will be put in *.../tests/rbc/*
+C-source code will be put in `.../generic/rbc/`
+Tcl-source  code will be put in `.../library/rbc/`
+Test files will be put in `.../tests/rbc/`
 
 The *Rbc* files will be added to the makefiles.
-The **Rbc__Init()** function will be added in tkWindow.c
+The call to the `Rbc_Init()` function will be added in tkWindow.c
 
 # Discussion
 
@@ -44,7 +44,7 @@ Which commands should be included?
 - **stripchart**: 
 - **barchart**:
 - **busy**: not needed, because we already have **tk busy**
-- **winop**: ?
+- **winop**: not needed; only functionality not duplicated is **winop snap**
 
 Should there be a special switch to enable compiling and including *Rbc*?
 
@@ -52,13 +52,12 @@ Should we change *Rbc* to some other name to prevent name clashes?
 
 Should we export a C-interface?
 
-See also discussion at the [wiki]
-(http://wiki.tcl.tk/55360).
+See also discussion at the [wiki](http://wiki.tcl.tk/55360).
 
 # Implementation
 
-A patch implementing these changes will be available in the fossil repository in the [tip-510 branch]
-(https://core.tcl.tk/tk/timeline?r=tip-510).
+A patch implementing these changes will be available in the fossil
+repository in the [tip-510 branch](https://core.tcl.tk/tk/timeline?r=tip-510).
 
 Test/Documentation updates not yet done.
 
