--- a/tip/520.md
+++ b/tip/520.md
@@ -88,7 +88,13 @@ function shall continue to throw errors when presented with `NaN`
 (there seems to be nothing sensible to do with these cases).
 
 The C interface `Tcl_GetDoubleFromObj` shall be modified to accept
-NaN's without thowing errors.
+NaN's without thowing errors. 
+
+The implementations of the `lsort` and `lsearch` commands shall be
+modified to continue to throw errors if a `NaN` is encountered in either
+the list or the search pattern. Since `NaN` is unordered with respect
+to any floating point constant, there is no correct behaviour for these
+commands when asked to sort a list containing one.
 
 # Reference Implementation
 
