Clarify that it is the -real option to [lsearch] and [lsort] that requires that floating-point numbers not be NaN.

--- a/tip/520.md
+++ b/tip/520.md
@@ -90,11 +90,12 @@ function shall continue to throw errors when presented with `NaN`
 The C interface `Tcl_GetDoubleFromObj` shall be modified to accept
 NaN's without thowing errors. 
 
-The implementations of the `lsort` and `lsearch` commands shall be
-modified to continue to throw errors if a `NaN` is encountered in either
-the list or the search pattern. Since `NaN` is unordered with respect
-to any floating point constant, there is no correct behaviour for these
-commands when asked to sort a list containing one.
+The implementations of the `lsort -real` and `lsearch -real` commands
+shall be modified to continue to throw errors if a `NaN` is
+encountered in either the list or the search pattern. Since `NaN` is
+unordered with respect to any floating point constant, there is no
+correct behaviour for these commands when asked to sort a list
+containing one.
 
 # Reference Implementation
 
