Format fixes in 523

--- a/tip/523.md
+++ b/tip/523.md
@@ -9,11 +9,11 @@
 	Keywords:	queue, stack, pop
 -----
 
-Abstract
+# Abstract
 
 Add a command to efficiently remove an element from a list.
 
-Rationale
+# Rationale
 
 Stacks and queues are common structures to use lists, and thus adding
 and removing elements are common operations.
@@ -21,7 +21,7 @@ Adding has a direct command through lappend, while removing has less
 obvious commands, which also needs tricks like K to avoid performance
 problems.
 
-A single command to both retreive the value and remove it is simpler.
+A single command to both retrieve the value and remove it is simpler.
 
 	set x [lpop stack]
 vs.
@@ -41,7 +41,7 @@ doing push/pop on a sublist becomes feasible.
 Since deleting last is rather common (stack) and also the cheapest operation,
 that is selected as default when no index is given.
 
-Specification
+# Specification
 
 A new command is added to the core with the following format.
 
