Make returns from [fpclassify] lowercase

--- a/tip/521.md
+++ b/tip/521.md
@@ -84,15 +84,15 @@ The set of Tcl commands shall be augmented with the following:
   
   > Returns one of the following strings:
   
-  > > `ZERO` - _value_ is a floating point zero
+  > > `zero` - _value_ is a floating point zero
 
-  > > `SUBNORMAL` - _value_ is the result of a gradual underflow
+  > > `subnormal` - _value_ is the result of a gradual underflow
 
-  > > `NORMAL` - _value_ is an ordinary floating-point number (not zero, subnormal, infinite, nor NaN).
+  > > `normal` - _value_ is an ordinary floating-point number (not zero, subnormal, infinite, nor NaN).
 
-  > > `INFINITE` - _value_ is a floating-point infinity
+  > > `infinite` - _value_ is a floating-point infinity
   
-  > > `NAN` - _value_ is Not-a-Number.
+  > > `nan` - _value_ is Not-a-Number.
   
   > Throws an error if _value_ is not a floating-point value.
   
