Updated 522 to match implementation.

--- a/tip/522.md
+++ b/tip/522.md
@@ -26,12 +26,18 @@ The most obvious test usage for them are exact matching and prefix matching,
 both easily done with a glob pattern since error codes do not have special
 characters.
 
+Having an error code check without requiring return code error makes no sense
+so as a convenience -returnCodes 1 is set if not present. A user that for some
+reason wants to allow more than 1 may still do so.
+
 # Specification
 
 Add a new option, -errorCode, to the test command in tcltest.
-When -errorCode is given and non-empty it is tested, as a glob pattern,
+This is a glob pattern and defaults to "*".
+When an error occurs in the body evaluation the pattern is tested
 against the error code from test execution.
-When -errorCode is given, -returnCodes defaults to 1.
+When -errorCode is given, and -returnCodes does not include 1, -returnCodes
+is set to 1.
 
 # Example
 
