Added a usage example

--- a/tip/524.md
+++ b/tip/524.md
@@ -58,6 +58,57 @@ kind _kind_ (must be either **-class** or **-instance**; **-class** is the
 default) that is set for _class_. If _class_ does not specify one, the empty
 string is returned.
 
+## Usage Example
+
+Effective use of this feature depends on using `namespace path`.
+
+    namespace eval mydialect {
+        namespace path ::oo::define
+
+        proc example {x} {
+            puts "This is an example($x) in [uplevel 1 self]"
+            method example {} [list puts example=$x]
+        }
+        proc constructor {arguments body} {
+            set body [string cat {puts "This is [self]";} $body]
+            tailcall ::oo::define constructor $arguments $body
+        }
+    }
+
+    puts "<<POINT-1>>"
+
+    oo::class create metaclass {
+        superclass oo::class
+        definitionnamespace mydialect
+    }
+
+    puts "<<POINT-2>>"
+
+    metaclass create cls {
+        constructor {abc} {
+            puts "abc = $abc"
+        }
+        example 123
+    }
+
+    puts "<<POINT-3>>"
+    set obj [cls create gorp xyz]
+    puts "<<POINT-4>>"
+    puts $obj
+    $obj example
+
+Which will print:
+
+    <<POINT-1>>
+    <<POINT-2>>
+    This is an example(123) in ::metaclass
+    <<POINT-3>>
+    This is ::gorp
+    abc = xyz
+    <<POINT-4>>
+    ::gorp
+    example=123
+
 # Implementation
 
 Conceptual outline in the branch `dkf-oo-override-definition-namespaces` but
