Add more use-cases and explanation

--- a/tip/414.md
+++ b/tip/414.md
@@ -35,14 +35,28 @@ function is used. The return value, which used to be _void_ is changed to
 _const char *_ and it returns the version of the Tcl library which was
 initialized. The full signature is:
 
- > EXTERN const char \*
+ > const char \*
    **Tcl\_SetPanicProc**\(
        Tcl\_PanicProc \*_panicProc_\);
 
+# Use-cases
+
+In [androwish](http://www.androwish.org/index.html/info/4332aaffebe72eb1). TIP #414 is used to
+simplify the initialization: Since mounting the zip-file containing all Tcl library scripts
+needs the encodings initialized before creating the interpreter, this functions allows
+androwish to do so, without initializing the Tcl encodings twice (once before opening the
+ZIP-file, once again after the encodings inside this ZIP-file are available) 
+
+[RFE 854941](http://core.tcl.tk/tcl/info/854941), an original idea from David Graveraux,
+can be implemented on top of TIP #414. An [experimental implementation](http://core.tcl.tk/tcl/timeline?r=rfe-854941)
+is already there, it just needs to be rebased.
+
+An experiment for [fossil (branch "initsubsystems2")](https://www.fossil-scm.org/index.html/timeline?r=initsubsystems2)
+is already done, showing how to improve loading the Tcl shell dynamically into an already running application.
+
 # Reference Implementation
 
-A reference implementation is available in the **initsubsystems** branch.
-<http://core.tcl.tk/tcl/info/initsubsystems> 
+A reference implementation is available in the [**initsubsystems**](http://core.tcl.tk/tcl/info/initsubsystems) branch.
 
 # Copyright
 
