Explain the flags TCL_TYPE_?

--- a/tip/481.md
+++ b/tip/481.md
@@ -53,8 +53,17 @@ a size_t length variable as well.
 
 This functions is able to function the same as Tcl\_GetIntFromObj, Tcl\_GetLongFromObj,
 Tcl\_GetWideFromObj and Tcl\_GetDoubleFromObj. The flags argument determines the actual
-conversion done.
+conversion done. The following flags are possible.
 
+ > **TCL\_TYPE\_I**(int \| long \| Tcl_WideInt) :  valuePtr points at an integer of given size
+ 
+ > **TCL\_TYPE\_U**(int \| long \| Tcl_WideInt) :  valuePtr points at an unsigned integer of given size
+ 
+ > **TCL\_TYPE\_D**(float \| double) : valuePtr points at a float or double
+
+Those 3 macro's use the sizeof() macro on the type to provide the requested size to Tcl\_GetValue(). Actually,
+you can use any integer type, so e.g. size\_t or intmax\_t work as well.
+  
  > int **Tcl\_GetUIntFromObj**\(Tcl\_Interp \*interp, Tcl\_Obj \*_objPtr_, void \*_valuePtr_\)
 
 This is a wrapper macro around **Tcl\_GetValue**, handling unsigned integer values only.
