--- a/tip/525.md
+++ b/tip/525.md
@@ -2,7 +2,7 @@
 	Author:         Donal K. Fellows <donal.k.fellows@manchester.ac.uk>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        24-Oct-2018
 	Post-History:
 	Keywords:       Tcl, testing, continuous integration
