--- a/tip/522.md
+++ b/tip/522.md
@@ -27,21 +27,23 @@ both easily done with a glob pattern since error codes do not have special
 characters.
 
 Having an error code check without requiring return code error makes no sense
-so as a convenience -returnCodes 1 is set if not present. A user that for some
+so as a convenience `-returnCodes 1` is set if not present. A user that for some
 reason wants to allow more than 1 may still do so.
 
 # Specification
 
-Add a new option, -errorCode, to the test command in tcltest.
-This is a glob pattern and defaults to "*".
-When an error occurs in the body evaluation the pattern is tested
+Add a new option, **-errorCode**, to the **test** command in the
+**tcltest** package.
+This is a glob pattern and defaults to "`*`".
+When an error occurs in the body evaluation, the pattern is tested
 against the error code from test execution.
-When -errorCode is given, and -returnCodes does not include 1, -returnCodes
-is set to 1.
+When **-errorCode** is given, and **-returnCodes** does not include
+`1` (or `error`, equivalently) so it is impossible for a valid error
+code to be generated, **-returnCodes** is set to `1`.
 
 # Example
 
-This
+This:
 
 	test dict-4.13 {dict replace command: type check is mandatory} -body {
 	    dict replace { a b c d e }
@@ -51,7 +53,7 @@ This
 	    dict get $opt -errorcode
 	} {TCL VALUE DICTIONARY}
 
-is replaced by this
+is replaced by this:
 
 	test dict-4.13 {dict replace command: type check is mandatory} -body {
 	    dict replace { a b c d e }
