--- a/tip/525.md
+++ b/tip/525.md
@@ -19,7 +19,7 @@ a boolean indicator of success or failure.
 # Rationale and Specification
 
 The Tcl test suite is great, but when a failure happens it reports success to
-its environment (by effectively doing an `exit 0`) which mans that there's no
+its environment (by effectively doing an `exit 0`) which means that there's no
 way to tell at the wider level whether the tests passed or failed except by
 manually inspecting the logs, which is a manual process that prevents the Tcl
 test suite from being used in an automated environment such as a continuous
@@ -61,7 +61,7 @@ prepared to deal with the consequences will notice.)
 # Implementation
 
 See the branches `travis-8.5`, `travis-8.6`, `travis-8.7` and `travis-9.0`;
-this TIP is specifically altering the procdure `runAllTests` to include
+this TIP is specifically altering the procedure `runAllTests` to include
 exactly one more line at the end:
 
     return [expr {[info exists testFileFailures] || [llength $failFiles]}]
