Added another example usage, simpler than the minor contortion required for Tcl itself.

--- a/tip/525.md
+++ b/tip/525.md
@@ -58,6 +58,12 @@ to set the `ERROR_ON_FAILURES` environment variable in order to get this
 additional behaviour at the outer level, so only an environment that is
 prepared to deal with the consequences will notice.)
 
+It is expected that new code with little need for very strict backward
+compatibility will instead just do:
+
+    # require packages and configure...
+    exit [tcltest::runAllTests]
+
 # Implementation
 
 See the branches `travis-8.5`, `travis-8.6`, `travis-8.7` and `travis-9.0`;
