Updated lpop to not support index list.

--- a/tip/523.md
+++ b/tip/523.md
@@ -39,9 +39,11 @@ To support both queue and stack the pop end needs to be chosen, and the easiest
 way is to have an index argument. This trivially extends the functionality to
 remove any element.
 
-Further, making it use index lists in the same way as lindex and lset does
+Further, making it use multiple indices in the same way as lindex and lset does
 gives more symmetry and together with lset's ability to add to a sublist,
 doing push/pop on a sublist becomes feasible.
+The ability in lset and lindex to get an index list is not supported since
+argument expansion covers that usage.
 
 Since deleting last is rather common (stack) and also the cheapest operation,
 that is selected as default when no index is given.
@@ -52,12 +54,12 @@ A new command is added to the core with the following format.
 
 	lpop listVar ?index ...?
 
-The given index is resolved to an element in the same way as lindex/lset does.
+The given indices are resolved to an element in the same way as lindex/lset
+does, except an index list is not supported, just plain index arguments.
 The return value is the element at index, and the list is modified to
 remove that element.
 If no index is given, the default is "end".
 An out of range index is an error.
-If index is given as an empty list, that is an error.
 
 # Copyright
 
