--- a/tip/523.md
+++ b/tip/523.md
@@ -61,6 +61,42 @@ remove that element.
 If no index is given, the default is "end".
 An out of range index is an error.
 
+# Discussion
+
+## Name
+
+Many alternative command names have been proposed.
+
+lpop, ltake, lremove, ltrunc, (Hunter Green #355E3B)
+
+No name will ever fully explain what it does or match all users' expectations
+of that that name means. "lpop" is close enough and short.
+
+## Error
+
+Should an out of range index be an error or a no-op returning ""?
+
+Empty, for symmetry with lindex.
+
+"It has always seemed wrongheaded to me that commands like lindex return
+the empty string when no element exists"
+
+Lpop is not just reading like lindex, it is also removing and there the
+symmetry is not evident. Lreplace gives an error for too high indices.
+
+## Pop Multiple
+
+It was proposed to be able to pop more than one element.
+This could be an index list in last index, or an option:
+
+	lpop listVar ?index ...? {0 1)
+        lpop -n 2 listVar
+        lpop -gather {0 3 7} listVar
+
+This should take careful consideration since having a command that sometimes
+returns a list and sometimes an element should not be taken lightly.
+Any of the above versions are possible extensions to the current TIP.
+
 # Copyright
 
 This document has been placed in the public domain.
