Rebase TIP 506 to apply to Tcl 8.7.

--- a/tip/506.md
+++ b/tip/506.md
@@ -5,7 +5,7 @@
 	Vote:           Pending
 	Created:        30-Mar-2018
 	Post-History:   
-	Tcl-Version:	9.0
+	Tcl-Version:	8.7
 	Tcl-Branch:     tip-506
 -----
 
@@ -20,7 +20,7 @@ In all of recorded Tcl development history (since version 8.0p2 in 1998),
 the "routines" **Tcl_IncrRefCount**, **Tcl_DecrRefCount**, and
 **Tcl_IsShared** have been defined as macros, built on top of the
 premise that the caller has direct access to the **objPtr->refCount**
-field and the **TclFreeProc** routine, which is in public stubs even
+field and the **TclFreeObj** routine, which is in public stubs even
 though it has a name suggesting a private routine and users of the Tcl
 C interface are instructed not to call it other than through the
 **Tcl_DecrRefCount** macro.
@@ -44,14 +44,14 @@ up a cargo cult habit.
 
 Remove the macros **Tcl_IncrRefCount**, **Tcl_DecrRefCount**, and
 **Tcl_IsShared** from the **tcl.h** file. Create routines in the
-public stub table to replace them. Remove **TclFreeObj** from the
-public stub table.
+public stub table to replace them. Mark **TclFreeObj** as deprecated
+in the public stub table, and remove it from the Tcl 9 branch.
 
 # Compatibility
 
-This is a hard binary incompatibility. It is properly proposed
-as a change for Tcl 9, where all extensions and applications will
-require a re-compile anyway.
+The removal of **TclFreeObj** is is a hard binary incompatibility.
+It is properly proposed as a change for Tcl 9, where all extensions
+and applications will require a re-compile anyway.
 
 # Implementation
 
