Mark TIP 522 as voting.

--- a/tip/522.md
+++ b/tip/522.md
@@ -2,7 +2,7 @@
 	Author:		Peter Spjuth <peter.spjuth@gmail.com>
 	State:		Draft
 	Type:		Project
-	Vote:		Pending
+	Vote:		In progress
 	Created:	22-Oct-2018
 	Post-History:
 	Tcl-Version:	8.7
