Updated the tip479 spec to place the new commands for dictargs wrapping in a dedicated namespace and leave room in the spec for handling alternate argument handing schemes

--- a/tip/479.md
+++ b/tip/479.md
@@ -1,4 +1,4 @@
-# TIP 479: Add Named Procedures as a New Command in Tcl (procx)
+# TIP 479: Add Named Procedures as a New Command in Tcl (dictargs::proc)
 	Author:         Sean Woods <yoda@etoyoc.com>
 	State:          Draft
 	Type:           Project
@@ -35,18 +35,30 @@ they at no time feed a script with local variables.
 
 Currently if the last parameter named *args* is given a default value, that information
 is essentially ignored by the workings inside of tclProc.c. This spec calls for storing
-a dict stored where a default would go for the args parameter. Each key in the dict
-will be the name of a local variable that the parameter will populate. The values in the
-dict wil be a key/value set of configuration option for the named parameter system.
+information where a default would go for the args parameter. This information is a list
+with two fields: *namespace* and *spec*.
+
+*namespace* is a Tcl namespace which contains the command *parse*. Parse accepts two
+arguments, a specification and list containing the contents of *args*. How that
+specification is interpreted is left to the imagination of the developer.
+
+This spec defines a reference implementation called dictargs.
+
+# dictargs
+
+Under dictargs the specification for non positional arguments is a dict. Each key in the
+dict will be the name of a local variable that the parameter will populate. The values
+in the dict will be a key/value set of configuration option for the named parameter
+system.
 
 Developers can specify if a named parameter has a default if not given. They can also
 specify if the parameter is required. A non-mandatory parameter will not be mapped to
 a local variable, but it is understood that developers may want to advertise their
 presence for documentation purposes.
 
-		proc foo {{{args {
+		proc foo {{{args {dictargs {
 		   bar {default: baz}
-		}}}} {
+		}}}}} {
 		   puts $bar
 		}
 		% foo
@@ -55,18 +67,18 @@ presence for documentation purposes.
 		> bing
 
 The primary use case for this tip are new functions that take only named parameters. This
-TIP also calls for the creation of a new command, provisionally named *procx*. _procx_
+TIP also calls for the creation of a new command, provisionally named *dictargs::proc*. _dictargs::proc_
 will accept the same number of arguments as _proc_, but the format for the argument
 spec will be a dict instead of a list. For TclOO methods, we will also create an
-methodx as a shortcut to:
+dictargs::method as a shortcut to:
 
 		oo::define myclass method namemethod {{{args {
 		   bar {default: baz}
 		}}}} { ... }
 
-The workings of procx and methodx are essentially:
+The workings of dictargs::proc and dictargs::method are essentially:
 
-		proc procx {name argspec body} { proc $name [list [list args $argspec]] $body }
+		proc dictargs::proc {name argspec body} { proc $name [list [list args $argspec]] $body }
 
 Named parameters are designed to be deliverable in any order. Named parameters
 can also be omitted. As such it is necessary to provide more introspection than the
@@ -76,7 +88,7 @@ it can introspect with **$args** with **\[dict exists\]** to detect if an argume
 given at all. The argument spec that was given by the developer will also be available
 as the local variable **argspec**.
 
-		% procx p {a {default: {}}} { return $args }
+		% dictargs::proc p {a {default: {}}} { return $args }
 		% p
 		a {}
 		% p foo bar
@@ -86,7 +98,7 @@ Given these rules, we can get into non-intuitive failures. For instance, what wo
 happen if a default value was not provided for an argument, and the command call
 does not provide one.
 
-		% procx q {a {default: {}} b {}} {
+		% dictargs::proc q {a {default: {}} b {}} {
 		  # Proc assumes b will be given
 		  set result [list $a $b]
 		  foreach {f v} $args {
@@ -106,7 +118,7 @@ itself. After some play testing with the rules I have worked out what properties
 be tracked for each named parameter, and how those properties are calculated if not
 specified directly in the options.
 
-## Configuration Options for Named Parameters
+## Configuration Options for Dictargs Named Parameters
 
 The following general rules apply to all values given in the configuration dict for
 a named parameter.
@@ -130,7 +142,7 @@ When non-null, if a named parameter is missing from the call assume the value sp
 
 Example:
 
-		% procx u {
+		% dictargs::proc u {
 		  a { default: {A useful value} }
 		} {
 		  puts $a
@@ -152,7 +164,7 @@ the following rules apply to aliases:
 
 Example:
 
-		% procx u {
+		% dictargs::proc u {
 		  a {
 		    default: {A useful value}
 		    aliases: {alpha A}
@@ -185,8 +197,8 @@ This TIP will be rolled out in 3 stages.
 
 Stage 1 is a pure-tcl implementation to allow the community to try out the rules and
 see if this new concept is a good fit for Tcl. The implementation will use a macro-like
-template to place the implementation rules as a pre-amble to the body given to procx or
-methodx. This implementation will affect line numbers in traces, but should provide
+template to place the implementation rules as a pre-amble to the body given to dictargs::proc or
+dictargs::method. This implementation will affect line numbers in traces, but should provide
 the new features without introducing a major impact on performance.
 
 This implementation has been posted to the http://wiki.tcl.tk/49071 and will be kept up
@@ -209,14 +221,12 @@ To build the extension:
 
 ## State 3 - Core patch
 
-Stage 3 will introduce named parameters as a feature of the core. Modifications
-have been checked into the Tcl core as the tip479 branch.
+The original specification required modifications to the core. These modifications,
+while they did not seem to impact normal operations, also did not seem to actually
+improve performance over the pure-tcl or C compiled extension.
 
-At present if the last positional argument is named *args* a default value
-for that field, while recorded, is ignored. We will utilize that space to
-overload what arguments the procedure will accept beyond the positional arguments.
+The modifications
 
-Within tclProc.c are modifications to read that argument spec (if given).
 
 ### TclCreateProc
 
@@ -244,7 +254,7 @@ parameter with registered name parameters (and their associated local variable.
 
 ### init.tcl
 
-Two macros for procx and methodx are placed in the init.tcl file to
+Two macros for dictargs::proc and dictargs::method are placed in the init.tcl file to
 ensure those facilities are present at runtime. The community is presently
 in a debate as to whether seperate commands are the best approach, or modifying
 proc and oo::define::method to accept flags is better.
@@ -305,7 +315,7 @@ of a command. Consider:
 The standard only defines the behavior for several properties for parameters, but
 does not prohibit storing additional properties. Consider:
 
-    procx prettyproc {
+    dictargs::proc prettyproc {
       color {
         comment: {Color of the button}
         type: color
@@ -328,6 +338,17 @@ does not prohibit storing additional properties. Consider:
     }
 
 # Spec Revisions
+2018-10-19 - Replaced the idea that this tip would be providing the only means of
+named argument parsing with the concept that this tip would provide the shims for
+developers to provide such a mechanism, as well as provide a reference implementation
+called "dictargs".
+
+Renamed procx to dictargs::proc and methodx to dictargs::method, and clarified that
+argument parsing will be performed by dictargs::parse
+
+Removed the core patches, and instead casting this TIP as an information one for
+developers who wish to either exploit dictargs or utilize their own non-positional
+argument processing scheme.
 
 2017-11-03 - Renamed @proc to procx, @args to argsx and @method to methodx. Removed
 the internal variable @spec from bodies. Added
@@ -336,4 +357,4 @@ the internal variable @spec from bodies. Added
 a canonical name for the variable in the index. If a user really wants a different
 name in the arguments, we have the aliases facility. Also clarified that this
 tip will be modifying how a default for the args parameter is interpreter and
-that procxs and methodx are just convenience wrappers.
+that procx and methodx are just convenience wrappers.
